tests/approval/snapshots/approval_mysql__list_tools.snap
---
source: tests/approval/mysql.rs
assertion_line: 41
expression: tools
---
[
  {
    "name": "create_database",
    "description": "Create a new database.",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `create_database` tool.",
      "properties": {
        "database_name": {
          "description": "Name of the database to create. Must contain only alphanumeric characters and underscores.",
          "type": "string"
        }
      },
      "required": [
        "database_name"
      ],
      "title": "CreateDatabaseRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for tools with no structured return data.",
      "properties": {
        "message": {
          "description": "Description of the completed operation.",
          "type": "string"
        }
      },
      "required": [
        "message"
      ],
      "title": "MessageResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": false,
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false
    }
  },
  {
    "name": "drop_database",
    "description": "Drop an existing database. Cannot drop the currently connected database.",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `drop_database` tool.",
      "properties": {
        "database_name": {
          "description": "Name of the database to drop. Must contain only alphanumeric characters and underscores.",
          "type": "string"
        }
      },
      "required": [
        "database_name"
      ],
      "title": "DropDatabaseRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for tools with no structured return data.",
      "properties": {
        "message": {
          "description": "Description of the completed operation.",
          "type": "string"
        }
      },
      "required": [
        "message"
      ],
      "title": "MessageResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": false,
      "destructiveHint": true,
      "idempotentHint": false,
      "openWorldHint": false
    }
  },
  {
    "name": "drop_table",
    "description": "Drop a table from a database.",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `drop_table` tool.",
      "properties": {
        "database_name": {
          "description": "The database containing the table. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "table_name": {
          "description": "Name of the table to drop. Must contain only alphanumeric characters and underscores.",
          "type": "string"
        }
      },
      "required": [
        "database_name",
        "table_name"
      ],
      "title": "DropTableRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for tools with no structured return data.",
      "properties": {
        "message": {
          "description": "Description of the completed operation.",
          "type": "string"
        }
      },
      "required": [
        "message"
      ],
      "title": "MessageResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": false,
      "destructiveHint": true,
      "idempotentHint": false,
      "openWorldHint": false
    }
  },
  {
    "name": "explain_query",
    "description": "Return the execution plan for a SQL query.",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `explain_query` tool.",
      "properties": {
        "analyze": {
          "default": false,
          "description": "If true, use EXPLAIN ANALYZE for actual execution statistics. In read-only mode, only allowed for read-only statements. Defaults to false.",
          "type": "boolean"
        },
        "database_name": {
          "description": "The database to explain against. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "query": {
          "description": "The SQL query to explain.",
          "type": "string"
        }
      },
      "required": [
        "database_name",
        "query"
      ],
      "title": "ExplainQueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `read_query` tool.",
      "properties": {
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name."
        }
      },
      "required": [
        "rows"
      ],
      "title": "QueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true
    }
  },
  {
    "name": "get_table_schema",
    "description": "Get column definitions (type, nullable, key, default) and foreign key\nrelationships for a table. Requires `database_name` and `table_name`.",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `get_table_schema` tool.",
      "properties": {
        "database_name": {
          "description": "The database name containing the table. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "table_name": {
          "description": "The table name to inspect. Use `list_tables` first to see available tables in the database.",
          "type": "string"
        }
      },
      "required": [
        "database_name",
        "table_name"
      ],
      "title": "GetTableSchemaRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `get_table_schema` tool.",
      "properties": {
        "columns": {
          "description": "Column definitions keyed by column name."
        },
        "table_name": {
          "description": "Name of the inspected table.",
          "type": "string"
        }
      },
      "required": [
        "table_name",
        "columns"
      ],
      "title": "TableSchemaResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "list_databases",
    "description": "List all accessible databases on the connected database server.\nCall this first to discover available database names.",
    "inputSchema": {
      "properties": {},
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `list_databases` tool.",
      "properties": {
        "databases": {
          "description": "Sorted list of database names.",
          "items": {
            "type": "string"
          },
          "type": "array"
        }
      },
      "required": [
        "databases"
      ],
      "title": "ListDatabasesResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "list_tables",
    "description": "List all tables in a specific database.\nRequires `database_name` from `list_databases`.",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `list_tables` tool.",
      "properties": {
        "database_name": {
          "description": "The database name to list tables from. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        }
      },
      "required": [
        "database_name"
      ],
      "title": "ListTablesRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `list_tables` tool.",
      "properties": {
        "tables": {
          "description": "Sorted list of table names.",
          "items": {
            "type": "string"
          },
          "type": "array"
        }
      },
      "required": [
        "tables"
      ],
      "title": "ListTablesResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "read_query",
    "description": "Execute a read-only SQL query (SELECT, SHOW, DESCRIBE, USE, EXPLAIN).",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `read_query` and `write_query` tools.",
      "properties": {
        "database_name": {
          "description": "The database to run the query against. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "query": {
          "description": "The SQL query to execute.",
          "type": "string"
        }
      },
      "required": [
        "query",
        "database_name"
      ],
      "title": "QueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `read_query` tool.",
      "properties": {
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name."
        }
      },
      "required": [
        "rows"
      ],
      "title": "QueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true
    }
  },
  {
    "name": "write_query",
    "description": "Execute a write SQL query (INSERT, UPDATE, DELETE, CREATE, ALTER, DROP).",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `read_query` and `write_query` tools.",
      "properties": {
        "database_name": {
          "description": "The database to run the query against. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "query": {
          "description": "The SQL query to execute.",
          "type": "string"
        }
      },
      "required": [
        "query",
        "database_name"
      ],
      "title": "QueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `read_query` tool.",
      "properties": {
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name."
        }
      },
      "required": [
        "rows"
      ],
      "title": "QueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": false,
      "destructiveHint": true,
      "idempotentHint": false,
      "openWorldHint": true
    }
  }
]
